objects/Shared_Presentation__c.object
<CustomObject>
    <description>Logs Presentations, Slides, and Related Content that have been shared.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Shared_Presentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Includes_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsite_ID__c</fullName>
        <label>Microsite ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Presentation ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Emails_Not_Found__c</fullName>
        <inlineHelpText>Comma delimited list of email addresses that were shared but no Contact was found that matches their email address.</inlineHelpText>
        <label>Recipient Emails Not Found</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Content_ID__c</fullName>
        <description>CR-4837 - Created</description>
        <label>Related Content ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_By__c</fullName>
        <label>Shared By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Shared_Presentations1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Slide_ID__c</fullName>
        <externalId>true</externalId>
        <label>Slide ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Shared Event Material</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Shared Event Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shared Event Materials</pluralLabel>
    <recordTypes>
        <fullName>Shared_Presentation</fullName>
        <active>true</active>
        <label>Shared Presentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shared_Related_Content</fullName>
        <active>true</active>
        <label>Shared Related Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shared_Slide</fullName>
        <active>true</active>
        <label>Shared Slide</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>